<resources>

    <string name="app_name">三河市警务动态核查</string>

    <string name="init_data">正在获取最新内容</string>
    <string name="request_fail_msg">服务请求异常，请稍后重试！</string>

    <string name="sReadCard">单次读卡</string>
    <string name="sScanDevice">循环读卡</string>
    <string name="cardSetting">读卡设置</string>
    <string name="exitSys">退出系统</string>

    <string name="nostartSearch">未启动核查</string>

    <string name="toast_camera">无法启用相机</string>
    <string name="dw">&lt;37.3</string>
    <string name="gw">&gt;=37.3</string>

    <!-- 数据更改模块 start-->
    <string name="version">当前版本号</string>
    <string name="versionDetial">版本说明 </string>
    <string name="fileSize">文件大小</string>
    <string name="fileCount">文件条数</string>
    <string name="releaseDate">发布时间</string>
    <string name="syncDate">同步时间</string>
    <string name="dataState">数据状态</string>
    <string name="noupdata">当前无可更新版本！</string>
    <string name="updatingmsg">后台数据正在更新中，请稍后重试！!</string>
    <!-- 数据更新模块 end -->

</resources>
