<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qhd.DataUpdatingActivity">

    <com.acc.common.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_bar_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gaItems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tvStyle_black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="省厅数据" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/version"
                    android:textSize="@dimen/dp15" />

                <TextView
                    android:id="@+id/txtGaVersion"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/fileSize" />

                <TextView
                    android:id="@+id/txtGaFileSize"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/releaseDate" />

                <TextView
                    android:id="@+id/txtGaDate"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/versionDetial" />

                <TextView
                    android:id="@+id/txtVersionDetail"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtgadownload"
                style="@style/tvStyle_black_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0" />

            <ProgressBar
                android:id="@+id/progressgadownload"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progressDrawable="@drawable/custom_progress" />

            <TextView
                android:id="@+id/txtgaunzip"
                style="@style/tvStyle_black_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/progressgaunzip"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progressDrawable="@drawable/custom_progress"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/localItems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tvStyle_black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="本地数据" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/version" />

                <TextView
                    android:id="@+id/txtLocalVersion"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/releaseDate" />

                <TextView
                    android:id="@+id/txtLocalDate"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvStyle_black_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/fileCount" />

                <TextView
                    android:id="@+id/txtLocalFileCount"
                    style="@style/tvStyle_gray_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10" />

            </LinearLayout>

            <TextView
                style="@style/tvStyle_black_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0" />

            <ProgressBar
                android:id="@+id/progresslocaldownload"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progressDrawable="@drawable/custom_progress" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAllSync"
            style="@style/tvStyle_white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_bg_orange"
            android:padding="@dimen/dp_10"
            android:text="开始更新" />

        <TextView
            android:id="@+id/tv_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="正在下载，请勿退出或者点击返回键"
            android:textColor="@color/color_button_red"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>
