<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="readCardVM"
            type="guoTeng.readCard.readCard" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.acc.common.widget.TitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/title_bar_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:background="@mipmap/ic_sfzs"
                android:layout_marginRight="@dimen/dp5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="姓名"
                                android:textColor="@color/blue" />

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:autoText="false"
                                android:padding="@dimen/dp10"
                                android:textSize="16sp"></TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="性别"
                                android:textColor="@color/blue" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:padding="@dimen/dp10"
                                android:textSize="16sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="民族"
                                android:textColor="@color/blue" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:padding="@dimen/dp10"
                                android:textSize="16sp"></TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="生日"
                                android:textColor="@color/blue" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:padding="@dimen/dp10"
                                android:textSize="16sp" />
                        </LinearLayout>


                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:visibility="gone" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            android:visibility="gone" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:text="住址"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="@dimen/dp10"
                        android:textSize="16sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp10"
                        android:text="身份证号"
                        android:textColor="@color/blue"></TextView>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="@dimen/dp10"
                        android:textSize="16sp"></TextView>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView0"
                style="@style/tvStyle_black_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="查询结果" />

            <!-- 警示信息列表     -->
            <RelativeLayout
                android:id="@+id/ll_listbg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:background="@drawable/lv_empty">

                <TextView
                    android:id="@+id/tv_empty"
                    style="@style/tvStyle_gray"
                    android:textSize="22sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="未启动核查" />

                <ListView
                    android:id="@+id/js_list"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    android:divider="@color/bg"
                    android:dividerHeight="1dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="8dp"
                android:background="#fff"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/tvStyle_black_small"
                    android:layout_height="wrap_content"
                    android:text="体温" />

                <RadioGroup
                    android:id="@+id/radioGroup0"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton0"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={!readCardVM.mIsHighTw}"
                        android:text="@string/dw"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={readCardVM.mIsHighTw}"
                        android:text="@string/gw"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <EditText
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:text="@={readCardVM.mPhone}"
                    android:id="@+id/editText0"
                    android:background="@drawable/module_base_shape_button_bg_1_solid"
                    android:layout_height="wrap_content"
                    android:hint="请输入联系电话" />
            </LinearLayout>


            <TextView
                style="@style/tvStyle_black_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="同行信息" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tongche"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:padding="@dimen/dp10" />

                <CheckBox
                    android:id="@+id/ckb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp10"
                    android:text="是否同行" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/sfzh"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/startcheck_sfzh_bg"
                    android:gravity="center_vertical"
                    android:hint="请输入身份证号码"
                    android:padding="@dimen/dp10"
                    android:maxLength="18"
                    android:textColor="#8c8c8c"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_onlinecheck"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_marginRight="@dimen/dp5"
                    android:background="@drawable/btn_selector"
                    android:text="手动核查"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_marginRight="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:text="读卡核查"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_marginRight="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:text="拍照核查"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sReadCard" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sScanDevice" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardSetting"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exitSys" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
